# clap-markdown-generator

./: Cargo.toml  README.md
src/: lib.rs
tests/: markdown.rs
