[package]
name = "clap-markdown"
version = "0.1.0"
edition = "2024"
description = "Generate Markdown documentation from clap command definitions."
readme = "README.md"
repository = "https://github.com/xelis-project/clap-markdown"
homepage = "https://github.com/xelis-project/clap-markdown"
documentation = "https://docs.rs/clap-markdown"
keywords = ["clap", "markdown", "cli", "documentation"]
categories = ["command-line-interface", "development-tools::documentation"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
