[package]
name = "clap-markdown-generator"
version = "0.1.1"
edition = "2024"
description = "Generate Markdown documentation from clap command definitions."
readme = "README.md"
repository = "https://github.com/xelis-project/clap-markdown-generator"
homepage = "https://github.com/xelis-project/clap-markdown-generator"
documentation = "https://docs.rs/clap-markdown-generator"
keywords = ["clap", "markdown", "cli", "documentation"]
categories = ["command-line-interface", "development-tools"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
